<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="restaurant"
            type="io.github.viniciusalvesmello.restaurantguide.features.restaurants.model.RestaurantView" />
        <variable
            name="viewmodel"
            type="io.github.viniciusalvesmello.restaurantguide.features.restaurants.RestaurantDetailsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.restaurants.RestaurantDetailsFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contraint_layout_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contraint_layout_action_bar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/contraint_action_bar_height_detail_restaurant"
                    android:background="@color/primaryColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint_layout_back_pressed"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/ic_arrow_back_white_24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_action_bar_restaurant_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="48dp"
                        android:layout_marginRight="48dp"
                        android:text="@{restaurant.name.isEmpty() ? @string/restaurant_name : restaurant.name}"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/text_action_bar_restaurant_name_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/constraint_layout_back_pressed"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contraint_layout_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contraint_layout_action_bar">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_view_restaurant"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_view_restaurant_height"
                        android:cropToPadding="true"
                        android:scaleType="centerCrop"
                        android:src="@{restaurant.image}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_rating_restaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@{restaurant.rating.isEmpty() ? @string/rating : (restaurant.rating + ` - ` + restaurant.ratingDescription)}"
                        android:textColor="@color/secondaryColor"
                        android:textSize="@dimen/text_rating_restaurant"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_view_googlemaps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:src="@drawable/ic_googlemaps"
                        android:visibility="@{(restaurant.latitude.isEmpty() || restaurant.longitude.isEmpty()) ? View.GONE : View.VISIBLE}"
                        android:onClick="@{restaurant}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contraint_layout_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contraint_layout_top">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_title_cuisines"
                        android:layout_width="@dimen/text_title_width"
                        android:layout_height="wrap_content"
                        android:text="@string/title_cuisines"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_cuisines"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@{restaurant.cuisines.isEmpty() ? @string/uninformed : restaurant.cuisines}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/text_title_cuisines"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_title_phone_numbers"
                        android:layout_width="@dimen/text_title_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/title_phone_numbers"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/text_view_title_address"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_cuisines" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_phone_numbers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@{restaurant.phoneNumbers.isEmpty() ? @string/uninformed : restaurant.phoneNumbers}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/text_view_title_phone_numbers"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_cuisines" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_title_address"
                        android:layout_width="@dimen/text_title_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/title_address"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_title_phone_numbers" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@{restaurant.address.isEmpty() ? @string/uninformed : restaurant.address}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/text_view_title_address"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_phone_numbers" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contraint_layout_review"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contraint_layout_detail">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="@dimen/progress_bar_width"
                        android:layout_height="@dimen/progress_bar_height"
                        android:visibility="@{safeUnbox(viewmodel.inProcessLoadRestaurantReviews) ? View.VISIBLE : View.GONE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/secondaryColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_view_title_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/reviews"
                        android:textSize="@dimen/text_view_title_reviews"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycle_view_restaurant_reviews"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_title_reviews" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/coordinator_layout_snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>