...
        <variable
            name="city"
            type="io.github.viniciusalvesmello.restaurantguide.features.cities.model.CityView" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/card_view_city_min_height"
        android:onClick="@{city}"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
...
