...
        <variable
            name="restaurant"
            type="io.github.viniciusalvesmello.restaurantguide.features.restaurants.model.RestaurantView" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
...
